--- a/index.html
+++ b/index.html
@@ -5,38 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Store </title>
-    
+
 </head>
 
 <body>
-        <h1 style="color: rgb(137, 137, 233);">Welcome to Ab².T Food Mart</h1>
-        <p style="color: rgb(94, 184, 184);">Your one-stop shop for quality and affordable foodstuffs.</p>
-        <ul style="color: aquamarine;">
-            <li>Fresh farm produce</li>
-            <li>Healthy food options</li>
-            <li>Wholesale and retail prices</li>
-            <li>Unbeatable quality</li>
-        </ul>
-        <p style="color: rgb(94, 184, 184);">Shop Now and experience the best! <a href="[link]">Order Now</a></p>
+    <h1 style="color: rgb(137, 137, 233);">Welcome to Ab².T Food Mart</h1>
+    <p style="color: rgb(94, 184, 184);">Your one-stop shop for quality and affordable foodstuffs.</p>
+    <ul style="color: aquamarine;">
+        <li>Fresh farm produce</li>
+        <li>Healthy food options</li>
+        <li>Wholesale and retail prices</li>
+        <li>Unbeatable quality</li>
+    </ul>
+    <p style="color: rgb(94, 184, 184);">Shop Now and experience the best! <a href="[link]">Order Now</a></p>
 
-        
-        <form style="color: aquamarine;"
-        id="orderForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <br>
-            <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone" pattern="^+234 \d{3} \d{3} \d{4}$"  
-           maxlength="14"
-           minlength="14"
-           title="Enter phone number in format +234 XXX XXX XXXX" required
-            placeholder="+234 XXX XXX XXXX">
+
+    <form style="color: aquamarine;" id="orderForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br>
+        <label for="phone">Phone Number:</label>
+        <input type="tel" id="phone" name="phone" pattern="^+234 \d{3} \d{3} \d{4}$" maxlength="14" minlength="14"
+            title="Enter phone number in format +234 XXX XXX XXXX" required placeholder="+234 XXX XXX XXXX">
 
         <br>
-        <label  for="order">Order Details:</label>
+        <label for="order">Order Details:</label>
         <textarea id="order" name="" cols="30" rows="5"></textarea required> 
             <br>
             <button style="color: aqua;" style="background-color: rgb(192, 12, 12);" style="border: 0cm;"  type="submit">Place Order</button>
@@ -140,4 +136,3 @@
 </body>
 
 </html>
-
